sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:34: error: 'while' expected but '}' found.
  }
  ^AlgCocktailSort3:36: error: illegal start of simple expression
} 
^AlgCocktailSort3:38: error: Unmatched closing brace '}' ignored here
}
^